--- a/src/components/pages/Profile/UserProfile/style.scss
+++ b/src/components/pages/Profile/UserProfile/style.scss
@@ -68,6 +68,8 @@
     }
     .bio {
       font-weight: 300;
+      white-space: pre-wrap;
+      word-wrap: break-word;
       color: var(--primary-text-color);
     }
 
